<resources>
    <string name="app_name">tms-android-app</string>
    <string name="LoginButton">Login</string>
    <string name="LoginUser">Benutzername</string>
    <string name="LoginPasswort">Passwort</string>
    <string name="LoginButtonAnmeldung">Anmelden</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="activity_create_ticket_TicketName">Ticket Name</string>
    <string name="Description">Beschreibung</string>
    <string name="activity_create_ticket_Editor">Bearbeiter</string>
    <string name="Create">Erstellen</string>
    <string name="activity_create_project_AcceptanceCriteria">Akzeptanzkriterien</string>
    <string name="Status">Status</string>
    <string name="ProjectName">Projekt Name</string>
    <string name="confirmpassword">confirm Password</string>
    <string name="signin">Regestrieren</string>
    <string name="login">Anmelden</string>
</resources>
